add HTML for the script

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <body>
         <div class="boardContainer">
             <div class="boardControls">
-                <button id="reset">Reset</button>
-                <button id="resize">Resize</button>
+                <button id="resetButton">Reset</button>
+                <button id="resizeButton">Resize</button>
             </div>
             <div class="board">
-
+                
             </div>
-            
+
         </div>
     </body>
+    <script src = "script.js">
+        //codigo en script.js
+    </script>
 </html>
