--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
             <div class="boardControls">
                 <button id="resetButton">Reset</button>
                 <button id="resizeButton">Resize</button>
+                <button id="selectColor">Select Color</button>
+                <button id="randomColor">Random Color</button>
             </div>
             <div class="board">
                 
             </div>
-
+            <div class="colorSelected">
+                
+            </div>
         </div>
     </body>
     <script src = "script.js">
