fixed function names (button in a function is not a good name imo)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 
                 </div>
                 <button id="resetButton" onclick = "resetBoard();">Reset</button>
-                <button id="resizeButton" onclick = "resizeButton();">Resize</button>
-                <button id="selectColor" onclick = "changeColorButton()">Select Color</button>
+                <button id="resizeButton" onclick = "resize();">Resize</button>
+                <button id="selectColor" onclick = "changeColor()">Select Color</button>
                 <button id="randomColor">Random Color</button>
             </div>
             <div class="board">
