--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body onload="main();">
         <div class="boardContainer">
             <div class="boardControls">
+                <button id ="toggleGrid" class="gridEnabled" onclick = "toggleGrid();">Disable Grid</button>
                 <div class="colorSelected" ></div>
                 <button id="resetButton" onclick = "resetBoard();">Reset</button>
                 <button id="resizeButton" onclick = "resizeBoard(board, ammountBlocks = prompt('select size (max 100)'));">Resize</button>
