--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
                 <button id ="toggleGrid" class="gridEnabled" onclick = "toggleGrid();">Disable Grid</button>
                 <div class="colorSelected" ></div>
                 <button id="resetButton" onclick = "resetBoard();">Reset</button>
-                <button id="resizeButton" onclick = "resizeBoard(board, ammountBlocks = prompt('select size (max 100)'));">Resize</button>
+                <button id="resizeButton" onclick = "resizeBoard(BOARD, AMMOUNT_BLOCKS = prompt('select size (max 100)'));">Resize</button>
                 <button id="selectColor" title="rainbow is my favorite" onclick = "changeColor();">Select Color</button>
                 <button id="randomColor" onclick = "changeColor(randomColor());">Random Color</button>
-                <button id="eraser" onclick = "changeColor('rgba(255,255,255,0)');">Eraser</button>
+                <button id="eraser" onclick = "changeColor('eraser');">Eraser</button>
             </div>
             <div class="board">
                 
