fixed toggle grid button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body onload="main();">
         <div class="boardContainer">
             <div class="boardControls">
-                <button id ="toggleGrid" class="gridEnabled" onclick = "toggleGrid();">Disable Grid</button>
+                <button id ="toggleGrid" class="gridEnabled" onclick = "toggleGrid();">Enable Grid</button>
                 <div class="colorSelected" ></div>
                 <button id="resetButton" onclick = "resetBoard();">Reset</button>
                 <button id="resizeButton" onclick = "resizeBoard(BOARD, AMMOUNT_BLOCKS = prompt('select size (max 100)'));">Resize</button>
